--- a/heritagesites/templates/heritagesites/base.html
+++ b/heritagesites/templates/heritagesites/base.html
@@ -32,11 +32,14 @@
                 <a class="nav-link" href="{% url 'about' %}">about</a>
             </li>
             <li class="nav-item">
+                <a class="nav-link" href="{% url 'site_filter' %}">sites</a>
+            </li>
+            <!-- <li class="nav-item">
               <a class="nav-link" href="{% url 'site' %}">sites</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="{% url 'country_area' %}">countries/areas</a>
-            </li>
+            </li> -->
             <li class="nav-item">
               <a class="nav-link" href="{% url 'login' %}">login</a>
             </li>
