--- a/heritagesites/templates/heritagesites/site_detail.html
+++ b/heritagesites/templates/heritagesites/site_detail.html
@@ -22,7 +22,7 @@
        </div>
      </header>
    
-     {% if site.country_area.all %}
+     <!-- {% if site.country_area.all %}
        <div class="row">
          <div class="col-sm-2">
            <p>Region</p>
@@ -85,7 +85,50 @@
          </div>
        </div>
    
+     {% endif %} -->
+     {% if site.region_names %}
+     <div class="row">
+       <div class="col-sm-2">
+         <p>Region</p>
+       </div>
+       <div class="col-sm-10">
+         <p>{{ site.region_names}}</p>
+       </div>
+     </div>
      {% endif %}
+
+     {% if site.sub_region_names %}
+     <div class="row">
+       <div class="col-sm-2">
+         <p>SubRegion</p>
+       </div>
+       <div class="col-sm-10">
+         <p>{{ site.sub_region_names}}</p>
+       </div>
+     </div>
+     {% endif %}
+
+     {% if site.intermediate_region_names %}
+     <div class="row">
+       <div class="col-sm-2">
+         <p>Intermediate Region</p>
+       </div>
+       <div class="col-sm-10">
+         <p>{{ site.intermediate_region_names}}</p>
+       </div>
+     </div>
+     {% endif %}
+
+      {% if site.country_area_names %}
+        <div class="row">
+          <div class="col-sm-2">
+            <p>Country / Area</p>
+          </div>
+          <div class="col-sm-10">
+            <p>{{ site.country_area_names}}</p>
+          </div>
+        </div>
+      {% endif %}
    
      {% if site.heritage_site_category.category_name %}
        <div class="row">
@@ -105,7 +148,7 @@
            <p>Description</p>
          </div>
          <div class="col-sm-10">
-          <p> {{ site.description | safe }}<p>
+           {{ site.description | safe }}
            <!-- <p>{{ site.description | safe }}</p> -->
          </div>
        </div>
@@ -158,7 +201,7 @@
        </div>
      {% endif %}
 
-     {% if site.transboundary %}
+     <!-- {% if site.transboundary %}
      <div class="row">
        <div class="col-sm-2">
          <p>Transboundary</p>
@@ -167,5 +210,5 @@
          <p>{{ site.transboundary }}</p>
        </div>
      </div>
-    {% endif %}
+    {% endif %} -->
    {% endblock content %}
